sw/source/filter/ww8/ww8par.hxx
@@ -1849,6 +1849,8 @@ public:     // really private, but can only be done public
     short ImportSprm( const sal_uInt8* pPos, sal_uInt16 nId = 0 );
 
     bool SearchRowEnd(WW8PLCFx_Cp_FKP* pPap,WW8_CP &rStartCp, int nLevel) const;
+    /// Seek to the end of the table with pPap, returns true on success.
+    bool SearchTableEnd(WW8PLCFx_Cp_FKP* pPap) const;
 
     const WW8Fib& GetFib() const    { return *m_pWwFib; }
     SwDoc& GetDoc() const           { return m_rDoc; }
